--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,6 @@ url = "2.3.1"
 regex = "1.6.0"
 serde_json = "1.0.87"
 env_logger = "*"
+clap = { version = "4.0.23", features = ["derive"] }
+clap-verbosity-flag = "2.0.0"
+linked_hash_set = "0.1.4"
