Add support for loading/saving config

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,5 @@ env_logger = "*"
 clap = { version = "4.0.23", features = ["derive"] }
 clap-verbosity-flag = "2.0.0"
 linked_hash_set = "0.1.4"
+rand = "0.8.5"
+dirs = "*"
